--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -560,7 +560,7 @@
    "id": "85e8c2d1-fc75-4b42-97c4-01a337ebec62",
    "metadata": {},
    "source": [
-    "To determine how many principal components we should choose to compute the neighborhood relations of the cells, we inspect the contribution of individual PCs to the total variance in the data"
+    ""
    ]
   },
   {
@@ -589,7 +589,7 @@
    "id": "4370bca7-cdd2-4926-84bc-8150b19e630f",
    "metadata": {},
    "source": [
-    "From the elbow plot, we observe fist 15-20 principal components capture the majority of variance."
+    ""
    ]
   },
   {
@@ -641,7 +641,7 @@
    "id": "8c3e616d-ca9f-435d-b0ee-2b5834eb2201",
    "metadata": {},
    "source": [
-    "Then We embed neighborhood graph into two-dimensional space and visualize it using UMAP"
+    "Then we embed the neighborhood graph into a two-dimensional space and visualize it using UMAP"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "id": "f18cc538-2d05-4ada-bf97-a58b6300a8e4",
    "metadata": {},
    "source": [
-    "We annotated the cell types based on the marker genes and proteins listed below."
+    "We annotated the cell types based on the listed marker genes and proteins below."
    ]
   },
   {
@@ -710,7 +710,7 @@
    "id": "4c693bad-51e5-47a6-b3cc-3420f24aa169",
    "metadata": {},
    "source": [
-    "The process involved multiple iteration of subclustering and re-annotation, it's difficult to show the entire process. We load the saved cell_type annotation file. "
+    "The process involved multiple iterations of subclustering and re-annotation, making it difficult to show the entire process. We loaded the saved cell type annotation file."
    ]
   },
   {
@@ -760,7 +760,7 @@
    "id": "42b4896a-bfb3-4080-9acb-dbbb8b2a5a3c",
    "metadata": {},
    "source": [
-    "Checking number of cells for each cell type."
+    "Checking the number of cells for each cell type."
    ]
   },
   {
@@ -801,7 +801,7 @@
     "## pySPaRTAN execution\n",
     "### Reviewing pySPaRTAN model\n",
     "\n",
-    "pySPaRTAN is constructed as a bilinear regression model. The inputs are D: a gene-TF matrix, P: a cell x protein matrix, and Y: a gene x cell matrix. D is a prior dataset that can be downloaded online. P and Y are normalized protein and gene expression data derived from our processed CITE-seq data. The model learns the interaction matrix W between cell surface proteins and transcription factor activity that best predicts the target gene expression.\n",
+    "SPaRTAN is structured as a bilinear regression model. The inputs consist of: D: gene-TF matrix, P: a matrix of cell x protein, representing normalized protein expression data derived from our processed CITE-seq data, and Y: a gene x cell matrix, representing normalized gene expression data from the same CITE-seq dataset. The model learns the interaction matrix W between cell surface proteins and transcription factors that best predicts the target gene expression.\n",
     "\n",
     "<img src=\"pySPaRTAN_diagram_2.png\" alt=\"Diagram\" width=\"600\" />\n",
     "\n",
