--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "Cell identity and function depend on complex signaling and transcriptional programs. Advances in single-cell technology have enabled the analysis of transcriptional states coupled with cell surface receptor expression. This tutorial will demonstrate the usage of our computational framework pySPaRTAN, a Python implementation of the SPaRTAN (Single-cell Proteomic and RNA-based Transcription factor Activity Network) framework. SPaRTAN models the flow of information from cell-surface receptors to transcription factors (TFs), then regulate target genes. pySPaRTAN utilizes CITE-seq data, which includes cell surface protein and gene expression, to infer TF activity.\n",
     "\n",
-    ""
+    "SPaRTAN is availabe at https://academic.oup.com/nar/article/49/17/9633/6368058"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "id": "85e8c2d1-fc75-4b42-97c4-01a337ebec62",
    "metadata": {},
    "source": [
-    ""
+    "To determine how many principal components we should choose to compute the neighborhood relations of the cells, we inspect the contribution of individual PCs to the total variance in the data"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "id": "4370bca7-cdd2-4926-84bc-8150b19e630f",
    "metadata": {},
    "source": [
-    ""
+    "From the elbow plot, we observe fist 15-20 principal components capture the majority of variance."
    ]
   },
   {
@@ -641,7 +641,7 @@
    "id": "8c3e616d-ca9f-435d-b0ee-2b5834eb2201",
    "metadata": {},
    "source": [
-    "Then we embed the neighborhood graph into a two-dimensional space and visualize it using UMAP"
+    "Then We embed neighborhood graph into two-dimensional space and visualize it using UMAP"
    ]
   },
   {
@@ -679,7 +679,7 @@
    "id": "f18cc538-2d05-4ada-bf97-a58b6300a8e4",
    "metadata": {},
    "source": [
-    "We annotated the cell types based on the listed marker genes and proteins below."
+    "We annotated the cell types based on the marker genes and proteins listed below."
    ]
   },
   {
@@ -710,7 +710,7 @@
    "id": "4c693bad-51e5-47a6-b3cc-3420f24aa169",
    "metadata": {},
    "source": [
-    "The process involved multiple iterations of subclustering and re-annotation, making it difficult to show the entire process. We loaded the saved cell type annotation file."
+    "The process involved multiple iteration of subclustering and re-annotation, it's difficult to show the entire process. We load the saved cell_type annotation file. "
    ]
   },
   {
@@ -760,7 +760,7 @@
    "id": "42b4896a-bfb3-4080-9acb-dbbb8b2a5a3c",
    "metadata": {},
    "source": [
-    "Checking the number of cells for each cell type."
+    "Checking number of cells for each cell type."
    ]
   },
   {
@@ -801,25 +801,18 @@
     "## pySPaRTAN execution\n",
     "### Reviewing pySPaRTAN model\n",
     "\n",
-    "SPaRTAN is structured as a bilinear regression model. The inputs consist of: D: gene-TF matrix, P: a matrix of cell x protein, representing normalized protein expression data derived from our processed CITE-seq data, and Y: a gene x cell matrix, representing normalized gene expression data from the same CITE-seq dataset. The model learns the interaction matrix W between cell surface proteins and transcription factors that best predicts the target gene expression.\n",
+    "pySPaRTAN is constructed as a bilinear regression model. There are three inputs for the model:\n",
+    "\n",
+    "D: each row represents a gene and each column is a binary vector representing the target genes of a TF\n",
+    "\n",
+    "P: each row represents a cell and each column represents CLR normalized surface protein expression \n",
+    "\n",
+    "Y: log-normalized gene expression matrix where each column of Y corresponds to a cell \n",
+    "\n",
+    "The model learns the weight (interaction) matrix W between TFs and cell surface proteins that predicts TF-target gene expression \n",
     "\n",
     "<img src=\"pySPaRTAN_diagram_2.png\" alt=\"Diagram\" width=\"600\" />\n",
-    "\n",
-    "<img src=\"equation_1.png\" alt=\"Diagram\" width=\"120\" />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e09f59ee-8d93-4d33-8923-59987c52e996",
-   "metadata": {},
-   "source": [
-    "There are three inputs for the package: D, P Y\n",
-    "\n",
-    "D: gene-tf matrix.\n",
-    "\n",
-    "P: cell x ADT matrix. \n",
-    "\n",
-    "Y: gene x cell matrix, \n"
+    "\n"
    ]
   },
   {
@@ -827,7 +820,12 @@
    "id": "f5594980-8cde-4fc7-adf9-6b7e4592a174",
    "metadata": {},
    "source": [
-    "We convert this bilinear equation into a linear regression and apply approximations to expedite its solution. For method details, please refer to https://academic.oup.com/nar/article/49/17/9633/6368058 ."
+    "We convert this bilinear equation\n",
+    "\n",
+    "<img src=\"equation_1.png\" alt=\"Diagram\" width=\"120\" />\n",
+    "\n",
+    "to an equivalent linear system of equations by reformulating the matrix products as Kronecker products and apply approximations to expedite its solution. For method details, please refer to \n",
+    "https://academic.oup.com/nar/article/49/17/9633/6368058 ."
    ]
   },
   {
@@ -836,12 +834,11 @@
    "id": "37fc5743-4546-4b54-9c9b-1511b791f47a",
    "metadata": {},
    "source": [
-    "After training the model, we obtain the learned TF and protein interaction matrix W. From matrix W we can \n",
-    "1. predict TF activities from the cell surface protein expression profile\n",
-    "   \n",
+    "Using the trained interaction matrix (W), we can predict \n",
     "\n",
-    "2. protein activities from the cellular mRNA expression data and the TF-target gene matrix\n",
-    "\n"
+    "1. TF activities from the cell surface protein expression profile.\n",
+    "\n",
+    "2. protein activities from the cellular mRNA expression data and the TF-target gene hit matrix.\n"
    ]
   },
   {
@@ -865,7 +862,7 @@
    "id": "ebd70098-e774-4eed-b06d-c248082069e1",
    "metadata": {},
    "source": [
-    "Loading gene-TF matrix"
+    "Loading gene-TF dataframe"
    ]
   },
   {
@@ -907,7 +904,7 @@
    "outputs": [],
    "source": [
     "RNA.X = RNA.layers['log1p']\n",
-    "# Aligning the genes in RNA with those in geneTF matrix\n",
+    "# Aligning the genes in RNA object with those in geneTF dataframe\n",
     "RNA = RNA[:, geneTF.index]"
    ]
   },
@@ -1019,28 +1016,9 @@
    "id": "9f7e6ff4-e374-42e8-bdc5-77ff9923351a",
    "metadata": {},
    "source": [
-    "P and Y are normalized CD8 T cell protein and RNA expression where each row represent a cell and each column represent a protein or a gene.  Different cell type will have different dimension size of P and Y matrix. While gene-TF matrix has the fixed size for all cell types. \n",
+    "P and Y represent normalized CD8 T cell protein and RNA expressions, where each row represents a cell and each column represents a protein or a gene. Different cell types have varying dimensionalities for P and Y dataframes, whereas the gene-TF dataframe maintains a fixed size across all cell types.\n",
     "\n",
-    "Note: The P matrix is corresponding to the Pt in above diagram figure"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "992780dd-bd63-4abf-a286-6595fa7e2ca8",
-   "metadata": {},
-   "source": [
-    "In order to accurately evaluate the model’s performance, we train the model using 80% of cells. The remaining 20% will be reserved for testing ."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "173e0003-8c26-461b-9ee9-aec15dc060f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "P_train, P_test, Y_train, Y_test = train_test_split(\n",
-    "    P, Y, test_size=0.2, random_state=0)"
+    "Note: The P here is corresponding to the Pt in above diagram figure"
    ]
   },
   {
@@ -1052,7 +1030,7 @@
     "\n",
     "To tune these hyperparamters, We employ cross-validation and grid search to determine the optimal values of lambda (ranging from 1e-5 to 10) and rsL2 (ranging from 0 to 1). The spectrum parameter requires less tuning; hence, we fix it at 0.7.\n",
     "\n",
-    "We define the list of lambda and rsL2 and fold of cross validation as follows:"
+    "We define the list of lambda, rsL2, spectrum and fold of cross validation as follows:"
    ]
   },
   {
@@ -1079,12 +1057,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "db01d753-c84a-4fad-8a15-98731943cd51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = pySPaRTAN(lambdas = lamdas, rsL2s = rsL2s, spectrums=spectrums, n_fold=fold)\n"
+    "model = pySPaRTAN(lambdas = lamdas, rsL2s = rsL2s, spectrums=spectrums, n_fold=fold)"
    ]
   },
   {
@@ -1114,14 +1092,6 @@
    ],
    "source": [
     "model.fit(D=D, P=P, Y=Y)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9756e67c-6003-4b85-a277-2fed34fb6a63",
-   "metadata": {},
-   "source": [
-    "After training the model on the training dataset, we evaluate its ability to predict gene expression based on protein expression using the testing dataset"
    ]
   },
   {
@@ -1318,7 +1288,7 @@
    "id": "7ff81d29-b7b1-4a32-851e-b559e759fd76",
    "metadata": {},
    "source": [
-    
+    "SMAD3-CD127, STAT5-TIGIT are known transcription factor-protein pairs that are highly correlated in CD8 T cells."
    ]
   }
  ],
