--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "49291063-f21a-43e1-96a3-d14794363cc9",
    "metadata": {
     "editable": true,
@@ -64,7 +64,32 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compiling cythLeastR/cythLeastR.pyx because it changed.\n",
+      "Compiling cythKronPlus/cythKronPlus.pyx because it changed.\n",
+      "[1/2] Cythonizing cythKronPlus/cythKronPlus.pyx\n",
+      "/opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/Cython/Compiler/Main.py:381: FutureWarning: Cython directive 'language_level' not set, using '3str' for now (Py3). This has changed from earlier releases! File: /Users/xim33/Documents/Tutorials-on-ISMB-2024/hands-on_tutorial/session-2/pySPaRTAN/cythKronPlus/cythKronPlus.pyx\n",
+      "  tree = Parsing.p_module(s, pxd, full_module_name)\n",
+      "[2/2] Cythonizing cythLeastR/cythLeastR.pyx\n",
+      "/opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/Cython/Compiler/Main.py:381: FutureWarning: Cython directive 'language_level' not set, using '3str' for now (Py3). This has changed from earlier releases! File: /Users/xim33/Documents/Tutorials-on-ISMB-2024/hands-on_tutorial/session-2/pySPaRTAN/cythLeastR/cythLeastR.pyx\n",
+      "  tree = Parsing.p_module(s, pxd, full_module_name)\n",
+      "In file included from cythLeastR/cythLeastR.c:1254:\n",
+      "In file included from /opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/numpy/core/include/numpy/arrayobject.h:5:\n",
+      "In file included from /opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/numpy/core/include/numpy/ndarrayobject.h:12:\n",
+      "In file included from /opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/numpy/core/include/numpy/ndarraytypes.h:1929:\n",
+      "\u001b[1m/opt/anaconda3/envs/seminar2024/lib/python3.12/site-packages/numpy/core/include/numpy/npy_1_7_deprecated_api.h:17:2: \u001b[0m\u001b[0;1;35mwarning: \u001b[0m\u001b[1m\"Using deprecated NumPy API, disable it with \"          \"#define NPY_NO_DEPRECATED_API NPY_1_7_API_VERSION\" [-W#warnings]\u001b[0m\n",
+      "#warning \"Using deprecated NumPy API, disable it with \" \\\n",
+      "\u001b[0;1;32m ^\n",
+      "\u001b[0m1 warning generated.\n",
+      "ld: warning: duplicate -rpath '/opt/anaconda3/envs/seminar2024/lib' ignored\n",
+      "ld: warning: duplicate -rpath '/opt/anaconda3/envs/seminar2024/lib' ignored\n"
+     ]
+    }
+   ],
    "source": [
     "# building two Cython objects\n",
     "! python  setup.py build_ext --inplace"
@@ -102,13 +127,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[34m__pycache__\u001b[m\u001b[m                        \u001b[31mequation_4.png\u001b[m\u001b[m\n",
-      "\u001b[34mbuild\u001b[m\u001b[m                              \u001b[31mpySPaRTAN.py\u001b[m\u001b[m\n",
-      "\u001b[34mcythKronPlus\u001b[m\u001b[m                       \u001b[31mpySPaRTAN_diagram_1.png\u001b[m\u001b[m\n",
-      "\u001b[31mcythKronPlus.cpython-312-darwin.so\u001b[m\u001b[m \u001b[31mpySPaRTAN_diagram_2.png\u001b[m\u001b[m\n",
-      "\u001b[34mcythLeastR\u001b[m\u001b[m                         \u001b[31mpySPaRTAN_diagram_3.png\u001b[m\u001b[m\n",
-      "\u001b[31mcythLeastR.cpython-312-darwin.so\u001b[m\u001b[m   \u001b[31mpySPaRTAN_tutorial.ipynb\u001b[m\u001b[m\n",
-      "\u001b[31mequation_1.png\u001b[m\u001b[m                     \u001b[31msetup.py\u001b[m\u001b[m\n"
+      "\u001b[34m__pycache__\u001b[m\u001b[m                        \u001b[31mpySPaRTAN.py\u001b[m\u001b[m\n",
+      "\u001b[34mbuild\u001b[m\u001b[m                              \u001b[31mpySPaRTAN_diagram_1.png\u001b[m\u001b[m\n",
+      "\u001b[34mcythKronPlus\u001b[m\u001b[m                       \u001b[31mpySPaRTAN_diagram_2.png\u001b[m\u001b[m\n",
+      "\u001b[31mcythKronPlus.cpython-312-darwin.so\u001b[m\u001b[m \u001b[31mpySPaRTAN_diagram_3.png\u001b[m\u001b[m\n",
+      "\u001b[34mcythLeastR\u001b[m\u001b[m                         \u001b[31mpySPaRTAN_tutorial.ipynb\u001b[m\u001b[m\n",
+      "\u001b[31mcythLeastR.cpython-312-darwin.so\u001b[m\u001b[m   \u001b[31msetup.py\u001b[m\u001b[m\n",
+      "equation_1.png\n"
      ]
     }
    ],
@@ -254,7 +279,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracting gene expression raw counts\n",
+    "# extracting ADT raw counts\n",
     "ADT = adata[:,adata.var[\"feature_types\"]==\"Antibody Capture\"].copy()\n",
     "\n",
     "# removing the isotype control for antibody\n",
@@ -829,7 +854,7 @@
    "metadata": {},
    "source": [
     "We extract RNA and ADT data for each cell type. \n",
-    "Note: here we convert the AnnData objects to Pandas dataframes."
+    "Note: we convert the AnnData objects to Pandas dataframes in this step."
    ]
   },
   {
@@ -934,7 +959,7 @@
    "source": [
     "P and Y represent normalized protein and RNA expressions, where each row represents a cell and each column represents a protein or a gene. \n",
     "\n",
-    "Note: the values of P dataframe here corresponds to the Pt in the diagram figure above."
+    "Note: the values of P dataframe corresponds to the Pt in the diagram figure above."
    ]
   },
   {
@@ -1913,7 +1938,7 @@
    "id": "2b332e92-b162-42bf-aae0-39eee102f45f",
    "metadata": {},
    "source": [
-    "Alternatively, we plot the correlations between TFs and a specific protein, highlighting the TFs with the highest and lowest correlations."
+    "Alternatively, we plot the correlations between TFs and a specific protein, highlighting TFs with the high and low correlations."
    ]
   },
   {
@@ -1951,6 +1976,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3ba6176a-4e8b-48b5-8af5-1e7d04107558",
+   "metadata": {},
+   "source": [
+    "We create a line plot and annotate N TFs with the highest and lowest correlations with the protein of interest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "id": "440c743f-6606-448f-bcd6-8c4b26c399e4",
@@ -1968,7 +2001,6 @@
     }
    ],
    "source": [
-    "# plotting lineplot\n",
     "plt.rcParams['figure.figsize'] = [14, 7]\n",
     "fig, ax = plt.subplots(1,2)\n",
     "prot = \"CD127\"\n",
