--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -253,7 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extracting gene expression raw counts\n",
+    "# extracting ADT raw counts\n",
     "ADT = adata[:,adata.var[\"feature_types\"]==\"Antibody Capture\"].copy()\n",
     "\n",
     "# removing the isotype control for antibody\n",
