--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -929,7 +929,7 @@
    "source": [
     "P and Y represent normalized protein and RNA expressions, where each row represents a cell and each column represents a protein or a gene. \n",
     "\n",
-    "Note: the values of P dataframe here corresponds to the Pt in the diagram figure above."
+    "Note: the values of P dataframe corresponds to the Pt in the diagram figure above."
    ]
   },
   {
