--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -1836,7 +1836,7 @@
     }
    ],
    "source": [
-    "#Trimming the end of protein names\n",
+    "#trimming the end of protein names\n",
     "tf_protein.columns = tf_protein.columns.str[:-10]\n",
     "tf_protein.columns"
    ]
