--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -1908,7 +1908,7 @@
    "id": "2b332e92-b162-42bf-aae0-39eee102f45f",
    "metadata": {},
    "source": [
-    "Alternatively, we plot the correlations between TFs and a specific protein, highlighting the TFs with the highest and lowest correlations."
+    "Alternatively, we plot the correlations between TFs and a specific protein, highlighting the TFs with high and low correlations."
    ]
   },
   {
@@ -1943,6 +1943,14 @@
     "    range_c = chain(range(0,N), range(len(x)-N, len(x)))\n",
     "    TF_labels = [labels[i] for i in range_c]\n",
     "    return(TF_labels)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bfaaf24-cb8e-4ef9-b17b-cc5bb5f3f230",
+   "metadata": {},
+   "source": [
+    "We create a line plot of TF correlations with the protein of interest and annotate the N TFs with the highest and lowest correlations."
    ]
   },
   {
