--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -120,7 +120,7 @@
    "id": "2e479e47-a7bf-4a49-a37b-96a2f47e1269",
    "metadata": {},
    "source": [
-    "Note: using \"ls\" command on Mac computer; \"dir\" command on Windows computer."
+    "Note: using \"ls\" command on Mac/Linux computer; \"dir\" command on Windows computer."
    ]
   },
   {
@@ -1986,7 +1986,7 @@
    "id": "7ff81d29-b7b1-4a32-851e-b559e759fd76",
    "metadata": {},
    "source": [
-    "From the lineplots above, we identified several known correlated TF-surface protein pairs in CD8 T cells, such as SMAD3-CD127 and STAT5-TIGIT."
+    "From the lineplots above, we observed several known correlated TF-surface protein pairs in CD8 T cells, such as SMAD3-CD127 and STAT5-TIGIT."
    ]
   }
  ],
