--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -228,7 +228,7 @@
    "id": "24f2b434-0ebf-46d8-98de-a2d2e9692a2a",
    "metadata": {},
    "source": [
-    "The ADT and RNA data are both stored in this adata object, differentiated by the feature_types variable. We will separate them into two distinct objects for ease of processing."
+    "The ADT and RNA data are both stored in this adata object, differentiated by the "feature_types" variable. We will separate them into two distinct objects for ease of processing."
    ]
   },
   {
