--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -503,7 +503,7 @@
    "id": "4370bca7-cdd2-4926-84bc-8150b19e630f",
    "metadata": {},
    "source": [
-    "From the above plot, we observe that the first 20-30 principal components capture the majority of variance."
+    "From the above plot, we observed that the first 20-30 principal components capture the majority of variance."
    ]
   },
   {
