--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -503,7 +503,7 @@
    "id": "4370bca7-cdd2-4926-84bc-8150b19e630f",
    "metadata": {},
    "source": [
-    "From the above plot, we observed that the first 20-30 principal components capture the majority of variance."
+    "From the above plot, we observe that the first 20-30 principal components capture the majority of variance."
    ]
   },
   {
@@ -1986,7 +1986,7 @@
    "id": "7ff81d29-b7b1-4a32-851e-b559e759fd76",
    "metadata": {},
    "source": [
-    "From the lineplots above, we observed several known correlated TF-surface protein pairs in CD8 T cells, such as SMAD3-CD127 and STAT5-TIGIT."
+    "From the lineplots above, we observe several known correlated TF-surface protein pairs in CD8 T cells, such as SMAD3-CD127 and STAT5-TIGIT."
    ]
   }
  ],
