--- a/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
+++ b/hands-on_tutorial/session-2/pySPaRTAN/pySPaRTAN_tutorial.ipynb
@@ -927,9 +927,7 @@
    "id": "9f7e6ff4-e374-42e8-bdc5-77ff9923351a",
    "metadata": {},
    "source": [
-    "P and Y represent normalized protein and RNA expressions, where each row represents a cell and each column represents a protein or a gene. \n",
-    "\n",
-    "Note: the values of P dataframe corresponds to the Pt in the diagram figure above."
+    "P and Y represent normalized protein and RNA expressions, where each row represents a cell and each column represents a protein or a gene. \n"
    ]
   },
   {
